fixed z-index issue

--- a/sass/inc/_reset.scss
+++ b/sass/inc/_reset.scss
@@ -3,7 +3,6 @@
   box-sizing: border-box;
   outline: none;
   position: relative;
-  z-index: 0;
 
   -webkit-backface-visibility: hidden;
   -webkit-font-smoothing: antialiased;
